--- a/Homeworks/HW1_logistic_regression.ipynb
+++ b/Homeworks/HW1_logistic_regression.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 2,
       "metadata": {
         "id": "3PhLKG01mF7y"
       },
@@ -132,8 +132,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "x_with_box, y_with_box = read_files('lesson1_dataset/box', ans = 1)\n",
-        "x_without_box, y_without_box = read_files('lesson1_dataset/no_box', ans = 0)"
+        "x_with_box, y_with_box = read_files('box_detect_dataset/box', ans = 1)\n",
+        "x_without_box, y_without_box = read_files('box_detect_dataset/no_box', ans = 0)"
       ]
     },
     {
